# ADONAI

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  GENESIS.adonai.txt  LICENSE  README.md  openapi.yaml  vcpkg.json
ci/: lint_imagefile  lint_run.sh  lint_run_all.sh  test_imagefile  test_run_all.sh
cmake/: adonai-build-config.h.in  bitcoin-build-config.h.in  ccache.cmake  crc32c.cmake  introspection.cmake  leveldb.cmake  libmultiprocess.cmake  windows-app.manifest.in
doc/: README.md  benchmarking.md  descriptors.md  developer-notes.md  export-descriptors.md  fee_security.md  feemodel.md  files.md  multiprocess.md  pow.md  productivity.md  recalculate-genesis.md  recover-from-seed.md  release-process.md  translation_process.md  translation_strings_policy.md  web-interface.md
frontend/: package-lock.json  package.json  tsconfig.app.json
gateway/: package-lock.json  package.json
src/: CMakeLists.txt  addrdb.cpp  addrdb.h  addresstype.cpp  addresstype.h  addrman.cpp  addrman.h  addrman_impl.h  adonai-chainstate.cpp  adonai-cli-res.rc  adonai-cli.cpp  adonai-res.rc  adonai-tx-res.rc  adonai-tx.cpp  adonai-util-res.rc  adonai-util.cpp  adonai-wallet-res.rc  adonai-wallet.cpp  banman.h  (+147 more)
src/test/fuzz/util/: CMakeLists.txt  check_globals.cpp  check_globals.h  descriptor.cpp  descriptor.h  mempool.cpp  mempool.h  net.cpp  net.h  wallet.h
src/zmq/: CMakeLists.txt  zmqabstractnotifier.cpp  zmqabstractnotifier.h  zmqnotificationinterface.cpp  zmqnotificationinterface.h  zmqpublishnotifier.cpp  zmqpublishnotifier.h  zmqrpc.cpp  zmqrpc.h  zmqutil.cpp  zmqutil.h
(+1208 files in other folders)
